syntax = "proto3";


package usermgmt;

option go_package = "wjuniorbh92/go-grpc-poc";

service SaveSharePrice {
  rpc StoreStockDatabase (stream StockPrice) returns (PriceResponse) {}
}

message StockPrice {
  string symbol = 1;
  string last = 2;
}

message PriceResponse {
  string symbol = 1;
}

